--- a/demos/index.html
+++ b/demos/index.html
@@ -5,6 +5,13 @@
   <title>Screen Sharing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="shortcut icon" href="/demos/logo.png">
+  <link rel="stylesheet" href="//www.random.org/lib/bootstrap-3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//www.random.org/lib/bootstrap-3.4.1/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="//www.random.org/lib/fontawesome-pro-5.1.0-web/css/fontawesome.css">
+  <link rel="stylesheet" href="//www.random.org/lib/fontawesome-pro-5.1.0-web/css/brands.css">
+  <link rel="stylesheet" href="//www.random.org/lib/prettify/css/prettify.css">
+  <link rel="stylesheet" href="//www.random.org/lib/prettify/css/prettify-rdo.css">
+  <link rel="stylesheet" href="//www.random.org/lib/rdo-3.3.1/css/rdo.css">
   <script src="/dist/RTCMultiConnection.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
@@ -20,27 +27,29 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <div class="container-fluid">
       <div class="row">
-        <a class="logo" href="/"><img src="/demos/ScreenLogo.png" alt="RTCMultiConnection"></a>
-        <h1><p1>ShareScreen</p1> Dotcom</h1>
+        <a class="logo" href="/"><img src="/demos/ScreenLogo.png" class="rounded-circle"></a>
+        <h1 class="head"><p1>ShareScreen</p1> Dotcom</h1>
         <div style="margin-top:30px;">
-          <a class="no-mobile" href="/">Home</a>
-          <a class="no-mobile" onclick="changeColor()">Styles</a>
-          <a class="no-mobile" href="https://www.rtcmulticonnection.org/FAQ/">FAQ</a>
-          <a class="no-mobile" href="https://github.com/zeyasE/shareclass">Github</a>
-          <a class="no-mobile" href="https://gmail.com">Contact</a>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-2" role="group" aria-label="First group">
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="/">Home</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="/">Styles</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="https://www.rtcmulticonnection.org/FAQ/">FAQ</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="https://github.com/zeyasE/shareclass">Github</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="https://gmail.com">Contact</a></button>
+          </div>
         </div>
       </div>
     </div>
   </header>
-  <p class="border"></p>
   <div class="margin">
     <h1>Screen Sharing Online<p>One to many screen sharing using RTCMulticonnection.</p></h1>
     <section class="make-center">
       <div class="make-center">
-        <button id="open-room" data-toggle="tooltip" data-placement="top" title="Click to build room" >Host Screen</button>
+        <button id="open-room" class="main" data-toggle="tooltip" data-placement="top" title="Click to build room" >Host Screen</button>
         <!-- href="/demos/share.html" -->
-        <button id="join-room" data-toggle="tooltip" data-placement="top" title="Click to join room">Join Screen</button>
-        <button id="open-or-join-room" class="no-mobile">Open or Join</button>
+        <button id="join-room" class="main" data-toggle="tooltip" data-placement="top" title="Click to join room">Join Screen</button>
+        <button id="open-or-join-room" class="main" class="no-mobile">Open or Join</button>
       </div>
     </br>
     <input type="text" id="roomid" value="abcdef" autocorrect=off autocapitalize=off size=20>
@@ -48,7 +57,7 @@
   </br>
   </div>
   <div class="make-center">
-    <div id="videos-container" style="margin: 10px 0;"></div>
+    <div id="videos-container" style="margin: 10px 0; padding: 10px;"></div>
   </div>
     <div id="room-urls" style="text-align: center;display: none;background: #f0e8e8;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
   
