--- a/demos/index.html
+++ b/demos/index.html
@@ -67,17 +67,25 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="colorful-flower-on-dark-tropical-260nw-721703848.webp" alt="First slide">
+          <img class="d-block w-100" src="tutorial.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="colorful-flower-on-dark-tropical-260nw-721703848.webp" alt="Second slide">
+          <img class="d-block w-100" src="p1.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img_lights.jpg" alt="Third slide">
+          <img class="d-block w-100" src="p2.jpg" alt="Third slide">
         </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="p3.jpg" alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="p4.jpg" alt="Fifth slide">
+          </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
