--- a/demos/index.html
+++ b/demos/index.html
@@ -25,20 +25,19 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <div class="container-fluid">
       <div style="margin-top:30px; float: right;">
-          <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2" role="group" aria-label="First group">
-              <button type="button" class="btn btn-first"><a class="no-mobile" href="/">Home</a></button>
-              <button type="button" class="btn btn-first"><a class="no-mobile" href="/">Styles</a></button>
-              <button type="button" class="btn btn-first"><a class="no-mobile" href="https://www.rtcmulticonnection.org/FAQ/">FAQ</a></button>
-              <button type="button" class="btn btn-first"><a class="no-mobile" href="https://github.com/zeyasE/shareclass">Github</a></button>
-              <button type="button" class="btn btn-first"><a class="no-mobile" href="https://gmail.com">Contact</a></button>
-            </div>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-2" role="group" aria-label="First group">
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="/">Home</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="Tutorial.html">Tutorial</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="https://www.rtcmulticonnection.org/FAQ/">FAQ</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="https://github.com/zeyasE/shareclass">Github</a></button>
+            <button type="button" class="btn btn-first"><a class="no-mobile" href="contact.html">Contact</a></button>
           </div>
         </div>
+      </div>
     <div class="row">
-      <!-- <a class="logo" href="/"><img src="/demos/ScreenLogo.png" class="rounded-circle"></a> -->
+      <a class="logo"><img src="/demos/ScreenLogo.png"></a></br>
       <h1 class="head"><p1>ShareScreen</p1> Dotcom</h1>
     </div>
   </header>
@@ -68,42 +67,6 @@
   </div>
   </br>
   <div id="videos-container" style="margin: 1% 0; padding: 10px;text-align: center;"></div>
-  <div class="controlsize">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-block-start: 50px;">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="tutorial.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="p1.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="p2.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="p3.jpg" alt="Fourth slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="p4.jpg" alt="Fifth slide">
-          </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
 <script>
   document.getElementById('open-room').onclick = function() {
     disableInputButtons();
@@ -196,7 +159,7 @@ connection.onstream = function(event) {
     var width = innerWidth - 500;
     var mediaElement = getHTMLMediaElement(video, {
         title: event.userid,
-        buttons: ['full-screen'],
+        buttons: ['full-screen','stop'],
         width: width,
         heigth: height,
         showOnMouseEnter: true
